Change API URL to relative path

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -482,7 +482,7 @@
     
     <script type="text/babel">
         const { useState, useEffect } = React;
-        const API = 'http://localhost:5000/api';
+        const API = '/api';
         
         // API
         const api = {
